# project-birdman

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  ASSUMPTIONS.md  CALCULATION_SPEC.md  CHANGELOG.md  DATA_MODEL.md  DOMAIN_MODEL.md  PROJECT_BRIEF.md  README.md  REQUIREMENTS.md  ROADMAP.md  TASKS.md  VALIDATION_PLAN.md  docker-compose.yml  現段階で不足している要素・情報by Claude code&Codex.txt
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8b9ce2ae4e20_baseline_projects_requirement_specs_.py  9706411a806d_migrate_category_values_to_glider_human_.py  aedebbdef4cb_add_wing_planforms_and_analysis_runs.py  bd57b817d300_add_mass_items.py  df0509daf2b8_add_approvals.py
backend/src/pbm/: __init__.py
backend/src/pbm/adapters/: base.py  xflr5.py  xrotor.py
backend/src/pbm/api/: main.py  routes.py  schemas.py
backend/src/pbm/calculation/: aero_mock_polar.py  design_sweep.py  initial_sizing.py  lifting_line.py  mass_properties.py  prop_mock_momentum.py  spar_beam.py  static_stability.py
backend/src/pbm/domain/: aero_analysis.py  entities.py  (+13 more)
backend/tests/: conftest.py  test_aero_mock_polar.py  test_alembic_migration.py  test_api.py  test_api_aero.py  test_api_phase3.py  test_api_phase4.py  test_api_solver_integration.py  test_design_sweep.py  test_initial_sizing.py  test_mass_properties.py  test_planform.py  test_prop_mock_momentum.py  test_quantities.py  test_spar_beam.py  test_states.py  test_static_stability.py  test_xflr5_adapter.py  test_xflr5_case.py  test_xrotor_adapter.py  test_xrotor_case.py
(+36 files in other folders)
